[package]
name                 = "kkcrypto"
description          = "Set of cryptographic trait abstractions."
version              = "1.0.0"
license              = "MIT-0"
publish.workspace    = true
authors.workspace    = true
repository.workspace = true
edition.workspace    = true

[dependencies]
